k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
  labels: &labels
    app: greeter
spec:
  selector:
    # to avoid missing label selectors use YAML aliases
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: greeter
          image: image-registry.openshift-image-registry.svc:5000/csaa-tekton-pipeline/greeter:latest
          resources:
            limits:
              memory: "750Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
