k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: greeter
  name: greeter
spec:
  host: greeter-tektontutorial.apps.cluster-914a.914a.example.opentlc.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: greeter
    weight: 100
  wildcardPolicy: None
